[workspace]

resolver = "2"
members = [
    "crates/dominator-css-bindgen",
    "crates/dwind",
    "crates/dwind-macros",
    "crates/tests/dominator-css-bindgen-test",
    "crates/tests/dominator-css-bindgen-test-ui",
]

[workspace.dependencies]
cssparser = "0.34.0"
const_format = "0.2.32"
dominator = "^0.5.35"
futures = "0.3.30"
futures-signals = "0.3.33"
nom = "7.1.3"
once_cell = "^1.19.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.70"
thiserror = "1.0.61"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-bindgen-test = "0.3.42"
wasm-log = "0.3.1"
web-sys = { version = "0.3.69" }
