[workspace]

resolver = "2"
members = [
    "crates/dominator-css-bindgen",
    "crates/dwind",
    "crates/dwind-macros",
    "crates/dwui", "crates/example-html-macro", "crates/modern-normalize-cssys",
    "crates/tests/dominator-css-bindgen-test",
    "crates/tests/dominator-css-bindgen-test-ui",
]

[patch.crates-io]
futures-signals = { git = "https://github.com/Pauan/rust-signals.git" }

[workspace.dependencies]
cssparser = "0.34.0"
const_format = "0.2.32"
dominator = "^0.5.35"
futures = "0.3.30"
futures-signals = "^0.3.33"
futures-signals-component-macro = { version = "0.1.1", features = ["dominator"] }
matchit = "0.8.4"
nom = "7.1.3"
once_cell = "^1.19.0"
prettyplease = "0.2.20"
proc-macro2 = "1.0.86"
quote = "1.0.36"
serde = "1.0.204"
serde_json = "1.0.120"
syn = "2.0.70"
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy", "default-syntaxes", "default-themes"] }
thiserror = "1.0.61"
toml = "0.8.16"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-bindgen-test = "0.3.42"
wasm-log = "0.3.1"
web-sys = { version = "0.3.69", features = ["DomRect", "Element", "Navigator", "Url", "Window"] }
