[workspace]

resolver = "2"
members = [
    "crates/dominator-css-bindgen",
    "crates/dwind",
    "crates/dwind-base", "crates/dwind-build",
    "crates/dwind-macros",
    "crates/dwui",
    "crates/example-html-macro",
    "crates/modern-normalize-cssys",
    "crates/tests/dominator-css-bindgen-test",
    "examples/webpage",
]

[workspace.dependencies]
case = "1.0"
cssparser = "0.34"
const_format = "0.2"
dominator = "0.5"
futures = "0.3"
futures-signals = "0.3"
futures-signals-component-macro = { version = "0.1", features = [
    "dominator",
] }
log = "0.4"
matchit = "0.8"
nom = "7.1"
once_cell = "^1.19"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
serde = "1.0"
serde_json = "1.0"
syn = "2.0"
syntect = { version = "5.2", default-features = false, features = [
    "default-fancy",
    "default-syntaxes",
    "default-themes",
] }
thiserror = "1.0"
toml = "0.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
wasm-log = "0.3"
web-sys = { version = "0.3", features = [
    "DomRect",
    "Element",
    "Navigator",
    "Url",
    "Window",
    "HtmlSelectElement"
] }
