[package]
name = "dominator-css-bindgen"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/JedimEmO/dwind"
repository = "https://github.com/JedimEmO/dwind"
license-file = "LICENSE"
keywords = ["web", "wasm", "css", "style"]

[dependencies]
case.workspace = true
cssparser.workspace = true
nom.workspace = true
proc-macro2.workspace = true
quote.workspace = true
thiserror.workspace = true
