[package]
name = "dominator-css-bindgen"
version = "0.1.0"
edition = "2021"
description = "generate DOMINATOR rust bindings to use from your dwind based application"
homepage = "https://github.com/JedimEmO/dwind"
repository = "https://github.com/JedimEmO/dwind"
license = "MIT"
keywords = ["web", "wasm", "css", "style"]

[dependencies]
case = { workspace = true}
cssparser = { workspace = true}
nom = { workspace = true}
proc-macro2 = { workspace = true}
quote = { workspace = true}
thiserror = { workspace = true}
