[package]
name = "dwind-base"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/JedimEmO/dwind"
repository = "https://github.com/JedimEmO/dwind"
license-file = "LICENSE"
keywords = ["web", "wasm", "css", "style"]

[dependencies]
dominator.workspace = true
futures-signals.workspace = true