[package]
name = "dwind-base"
version = "0.1.0"
edition = "2021"
description = "DWIND base library used by the dwind generated code"
homepage = "https://github.com/JedimEmO/dwind"
repository = "https://github.com/JedimEmO/dwind"
license = "MIT"
keywords = ["web", "wasm", "css", "style"]

[dependencies]
dominator.workspace = true
futures-signals.workspace = true