[package]
name = "dwind-design-tokens"
version = "0.1.0"
edition = "2021"
description = "Design token parsing and data structures for DWIND"
homepage = "https://github.com/JedimEmO/dwind"
repository = "https://github.com/JedimEmO/dwind"
license = "MIT"
keywords = ["web", "wasm", "css", "design-tokens", "style"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
nom.workspace = true
thiserror.workspace = true

[dev-dependencies]