[package]
name = "dwind-macros"
version = "0.1.0"
edition = "2021"
description = "Macros used by the dwind crate for applying dominator classes to components using a custom language"
homepage = "https://github.com/JedimEmO/dwind"
repository = "https://github.com/JedimEmO/dwind"
license = "MIT"
keywords = ["web", "wasm", "css", "style"]

[lib]
proc-macro = true

[dependencies]
dominator.workspace = true
dwind-base = { path = "../dwind-base", version = "0.1.0" }
nom.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["parsing", "proc-macro"] }


[dev-dependencies]
const_format.workspace = true
dominator.workspace = true
futures-signals.workspace = true
once_cell.workspace = true
wasm-bindgen-test.workspace = true
