[package]
name = "dwui"
version = "0.5.0"
edition = "2021"
description = "UI Component library built on the DWIND style crate!"
homepage = "https://github.com/JedimEmO/dwind"
repository = "https://github.com/JedimEmO/dwind"
license = "MIT"
keywords = ["web", "wasm", "css", "style"]

[dependencies]
const_format.workspace = true
dwind = { path = "../dwind", version = "0.4" }
dwind-macros = { path = "../dwind-macros", version = "0.2.2" }
dominator.workspace = true
futures-signals.workspace = true
futures-signals-component-macro.workspace = true
once_cell.workspace = true
web-sys.workspace = true

[build-dependencies]
dominator-css-bindgen = { path = "../dominator-css-bindgen", version = "0.1.0" }
serde.workspace = true
