[package]
name = "example-html-highlight-macro"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/JedimEmO/dwind"
repository = "https://github.com/JedimEmO/dwind"
license = "MIT"
keywords = ["web", "wasm", "css", "style"]

[lib]
proc-macro = true

[dependencies]
prettyplease.workspace = true
syn.workspace = true
syntect.workspace = true
quote.workspace = true
proc-macro2.workspace = true
