[package]
name = "modern-normalize-cssys"
version = "0.1.0"
edition = "2021"
description = "rust bindings for modern-normalize for the DWIND crate"
homepage = "https://github.com/JedimEmO/dwind"
repository = "https://github.com/JedimEmO/dwind"
license = "MIT"
keywords = ["web", "wasm", "css", "style"]

[dependencies]
dominator.workspace = true
dominator-css-bindgen = { path = "../dominator-css-bindgen" }
once_cell.workspace = true
web-sys.workspace = true

[build-dependencies]
dominator-css-bindgen = { path = "../dominator-css-bindgen" }

[dev-dependencies]
wasm-bindgen-test.workspace = true