[package]
name = "dominator-css-bindgen-ui"
version = "0.1.0"
edition = "2021"
publish = false

[target]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format.workspace = true
dwind-macros = { path = "../../crates/dwind-macros" }
dwind = { path = "../../crates/dwind" }
dwui = { path = "../../crates/dwui" }
dominator.workspace = true
example-html-highlight-macro = { path = "../../crates/example-html-macro" }
futures.workspace = true
futures-signals.workspace = true
matchit.workspace = true
once_cell.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasm-log.workspace = true
web-sys.workspace = true
log.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"
