[package]
name = "dominator-css-bindgen-ui"
version = "0.1.0"
edition = "2021"
publish = false

[target]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format.workspace = true
dwind-macros = { path = "../../crates/dwind-macros", version = "0.2.2" }
dwind = { path = "../../crates/dwind", version = "0.4.0" }
dwui = { path = "../../crates/dwui", version = "0.5.0" }
dominator.workspace = true
example-html-highlight-macro = { path = "../../crates/example-html-macro", version = "0.1.0"}
futures.workspace = true
futures-signals.workspace = true
gloo-timers = { version = "0.3.0", features = ["futures"]}
matchit.workspace = true
once_cell.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasm-log.workspace = true
web-sys.workspace = true
log.workspace = true
