[package]
name = "dominator-css-bindgen-test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dominator = { workspace = true}
dominator-css-bindgen = { path = "../../dominator-css-bindgen", version = "0.1.0" }
once_cell = { workspace = true}

[build-dependencies]
dominator-css-bindgen = { path = "../../dominator-css-bindgen", version = "0.1.0" }
